--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "JobCleaner",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "Oculta ofertas de empresas no deseadas en CompuTrabajo.",
   "permissions": ["storage", "scripting", "activeTab"],
   "content_scripts": [
@@ -14,8 +14,10 @@
       ]
     }
   ],
+  "background": {
+    "service_worker": "background.js"
+  },
   "action": {
-    "default_popup": "popup/popup.html",
     "default_icon": {
       "128": "icons/icon128.png"
     }
